Migrate .NET5.0 to .NET Framework v4.8

--- a/SisMaper/App.xaml
+++ b/SisMaper/App.xaml
@@ -8,6 +8,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Teal.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
                 <ResourceDictionary Source="Views/Style/Style.xaml" />
                 <ResourceDictionary Source="Views/Templates/SearchTextBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
