--- a/SisMaper/Views/MainWindow.xaml
+++ b/SisMaper/Views/MainWindow.xaml
@@ -576,8 +576,7 @@
                 x:Name="Vendas"
                 Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF1B4441">
-                <TabItem.HeaderTemplate>
-                    <ItemContainerTemplate>
+                <TabItem.Header>
                         <StackPanel
                             Orientation="Vertical"
                             VerticalAlignment="Center">
@@ -588,8 +587,7 @@
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="Vendas" />
                         </StackPanel>
-                    </ItemContainerTemplate>
-                </TabItem.HeaderTemplate>
+                </TabItem.Header>
                 <local:ViewVendas 
                             Width="auto"
                             Height="auto"
@@ -624,8 +622,7 @@
             <TabItem
                 Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF843700">
-                <TabItem.HeaderTemplate>
-                    <ItemContainerTemplate>
+                <TabItem.Header>
                         <StackPanel
                             Orientation="Vertical"
                             VerticalAlignment="Center">
@@ -636,8 +633,7 @@
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="Cadastros" />
                         </StackPanel>
-                    </ItemContainerTemplate>
-                </TabItem.HeaderTemplate>
+                </TabItem.Header>
                 <TabControl
                     Margin="0">
                     <TabItem
@@ -691,8 +687,7 @@
                     <TabItem
                         x:Name="Usuários"
                         Style="{DynamicResource SisMaper.MainWindow.TabItem.SubMenu}">
-                        <TabItem.HeaderTemplate>
-                            <ItemContainerTemplate>
+                        <TabItem.Header>
                                 <StackPanel
                                     Orientation="Vertical"
                                     VerticalAlignment="Center">
@@ -703,8 +698,7 @@
                                         Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                         Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabItem}}}" />
                                 </StackPanel>
-                            </ItemContainerTemplate>
-                        </TabItem.HeaderTemplate>
+                        </TabItem.Header>
                         <Grid />
                     </TabItem>
                 </TabControl>
@@ -712,8 +706,7 @@
             <TabItem
                 Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#CC25A0FF">
-                <TabItem.HeaderTemplate>
-                    <ItemContainerTemplate>
+                <TabItem.Header>
                         <StackPanel
                             Orientation="Vertical"
                             VerticalAlignment="Center">
@@ -724,15 +717,13 @@
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="Relatórios" />
                         </StackPanel>
-                    </ItemContainerTemplate>
-                </TabItem.HeaderTemplate>
+                </TabItem.Header>
             </TabItem>
             <TabItem
                 x:Name="Configuações"
                 PreviewMouseLeftButtonDown="OpenConfig"
                 Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}">
-                <TabItem.HeaderTemplate>
-                    <ItemContainerTemplate>
+                <TabItem.Header>
                         <StackPanel
                             Orientation="Vertical"
                             VerticalAlignment="Center">
@@ -743,8 +734,7 @@
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type TabItem}}}" />
                         </StackPanel>
-                    </ItemContainerTemplate>
-                </TabItem.HeaderTemplate>
+                </TabItem.Header>
 
             </TabItem>
         </TabControl>
